--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -18,9 +18,9 @@ import AddonLibrary from './assets/addon-library.png';
 
 export const RightArrow = () => (
   <svg
-    viewBox="0 0 14 14"
-    width="8px"
-    height="14px"
+    viewBox='0 0 14 14'
+    width='8px'
+    height='14px'
     style={{
       marginLeft: '4px',
       display: 'inline-block',
@@ -29,11 +29,11 @@ export const RightArrow = () => (
       fill: 'currentColor',
       'path fill': 'currentColor',
     }}>
-    <path d="m11.1 7.35-5.5 5.5a.5.5 0 0 1-.7-.7L10.04 7 4.9 1.85a.5.5 0 1 1 .7-.7l5.5 5.5c.2.2.2.5 0 .7Z" />
+    <path d='m11.1 7.35-5.5 5.5a.5.5 0 0 1-.7-.7L10.04 7 4.9 1.85a.5.5 0 1 1 .7-.7l5.5 5.5c.2.2.2.5 0 .7Z' />
   </svg>
 );
 
-<Meta title="Configure your project" />
+<Meta title='Configure your project' />
 
 <div className="sb-container">
   <div className='sb-section-title'>
